fixed BG color on small screens

--- a/css/grid.css
+++ b/css/grid.css
@@ -107,4 +107,10 @@ i två olika klasser
   h3 {
     grid-column: 1/-1;
   }
+  #curse-forge-title {
+    grid-column: 1/-1;
+  }
+  h1 {
+    grid-column: 1/-1;
+  }
 }
