--- a/css/style.css
+++ b/css/style.css
@@ -128,8 +128,8 @@ h3 {
 .title-backgrounds {
   background-color: rgba(134, 218, 241, 0.5);
   border-radius: 10px;
-  padding-right: calc(100% - 100% + 5px);
-  padding-left: calc(100% - 100% + 5px); /*Fin padding och margin som förhindrar att bakgrundsfärgen sitter över hela grid-rutan*/
+  padding-right: -40%;
+  padding-left: -40%; /*Fin padding och margin som förhindrar att bakgrundsfärgen sitter över en för stor del av grid-rutan*/
   margin: 70px;
 
 }
